# server/api/swagger.yaml
@@ -10,12 +10,41 @@ paths:
       description: Get service health
       responses:
         200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                "$ref": "#/components/schemas/Ping"
+          "$ref": "#/components/responses/Ping"
   /health: *path_ping
+  /v1/auth/token/user:
+    get: &v1_auth_token_user_get
+      description: Issue Auth Token
+      parameters:
+        - in: query
+          name: email
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: password
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          "$ref": "#/components/responses/AuthToken"
+        400:
+          "$ref": "#/components/responses/Error"
+    post: &v1_auth_token_user_post
+      description: Verify Auth Token
+      parameters:
+        - "$ref": "#/components/parameters/AuthToken"
+      responses:
+        200:
+          $ref: "#/components/responses/AuthTokenValidation"
+                  
+        400:
+          $ref: "#/components/responses/Error"
+  /v1/auth/token/store:
+    get: *v1_auth_token_user_get
+    post: *v1_auth_token_user_post
+
   /v1/users:
       get:
         description: Get users
@@ -24,10 +53,21 @@ paths:
             description: List of Users
             content:
               application/json:
-                  schema:
-                    type: array
-                    items:
-                      "$ref": "#/components/schemas/User"
+                schema:
+                  type: array
+                  items:
+                    "$ref": "#/components/schemas/User"
+      post:
+        description: Register user
+        requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                  "$ref": "#/components/schemas/CreateUser"
+        responses:
+          201:
+            $ref: "#/components/responses/CreateUser" 
   /v1/users/{id}:
       get:
         description: Get user
@@ -38,7 +78,7 @@ paths:
             required: true
             schema:
               type: integer
-              format: int64
+              format: int32
         responses:
           200:
             description: User
@@ -56,7 +96,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int64
+            format: int32
       responses:
         200:
           description: User's cart
@@ -74,7 +114,7 @@ paths:
           required: false
           schema:
             type: integer
-            format: int64
+            format: int32
       responses:
         200:
           description: Products
@@ -89,12 +129,12 @@ paths:
       description: Get Products
       parameters:
         - in: path
-          name: product_id
+          name: id
           description: ID of the Product
           required: true
           schema:
             type: integer
-            format: int64
+            format: int32
       responses:
         200:
           description: Products
@@ -102,32 +142,104 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/Product"               
-  /v1/favorite:
-    get:
-      description: Get favorite
-      parameters:
-        - in: query
-          name: store_id
-          description: ID of the Store
-          required: false
-          schema:
-            type: integer
-            format: int64
+  # /v1/favorite:
+  #   get:
+  #     responses:
+  #       200:
+  #         description: Get favorite
+  #         parameters:
+  #           - in: query
+  #             name: store_id
+  #             description: ID of the Store
+  #             required: false
+  #             schema:
+  #               type: integer
+  #               format: int32
   # /v1/
   # /v1/
   # /v1/
 
 components:
-  schemas:
+  responses:
     Ping:
-      required:
-        - ts
-      type: object
-      properties:
-        ts:
-          type: integer
-          format: int64
+      description: Healthcheck response
+      x-go-name: PingResponse
+      content:
+        application/json:
+          schema:
+            type: object
+            required:
+              - ts
+            properties:
+              ts:
+                type: integer
+                format: int64
+    Message:
+      description: Information Response
+      x-go-name: MessageResponse
+      content:
+        application/json:
+          schema:
+            required:
+              - message
+            type: object
+            properties:
+              message:
+                type: string
+    Error:
+      description: General Error
+      x-go-name: ErrorResponse
+      content:
+        application/json:
+          schema:
+            type: object
+            required:
+              - error
+            properties:
+              error:
+                type: string
+    AuthToken:
+      description: Authentication Token
+      x-go-name: AuthTokenResponse
+      content:
+        application/json:
+          schema:
+            type: object
+            required:
+              - token
+            properties:
+              token:
+                type: string
+    AuthTokenValidation:
+      description: AuthToken validation result
+      x-go-name: AuthTokenValidationResponse
+      content:
+        application/json:
+          schema:
+            type: object
+            required:
+              - valid
+            properties:
+              valid:
+                type: boolean
+    CreateUser:
+      description: User created
+      x-go-name: CreateUserResponse
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/User"
+  parameters:
+    AuthToken:
+      in: header
+      name: &X_AUTH_TOKEN X-Auth-Token
+      description: Authentication/API Token
+      required: true
+      schema:
+        type: string
+  schemas:
     Store:
+      type: object
       required:
         - id
         - name
@@ -135,7 +247,6 @@ components:
         - email
         - phone_number
         - created
-      type: object
       properties:
         id:
           type: integer
@@ -150,34 +261,56 @@ components:
           type: string
         created:
           type: integer
-          format: int64
-    User:
-      required:
-          - id
-          - first_name
-          - last_name
-          - email
-          - password
-          - phone_number
-          - created
+          format: int32
+    CreateUser:
       type: object
+      required:
+        - first_name
+        - last_name
+        - email
+        - password
+        - phone_number
+      properties:
+        first_name:
+          type: string
+          minLength: 2
+          maxLength: 64
+        last_name:
+          type: string
+          minLength: 2
+          maxLength: 64
+        email:
+          type: string
+          minLength: 5
+          maxLength: 256
+        password:
+          type: string
+          minLength: 6
+          maxLength: 128
+        phone_number:
+          type: string
+          minLength: 8
+          maxLength: 24
+    User:
+      type: object
+      required:
+        - id
+        - first_name
+        - last_name
+        - email
+        - phone_number
       properties:
         id:
           type: integer
-          format: int64
+          format: int32
         first_name:
           type: string
         last_name:
           type: string
         email:
           type: string
-        password:
-          type: string
         phone_number:
           type: string
-        created:
-          type: integer
-          format: int64
     ProductCategory:
       required:
         - id
@@ -189,7 +322,7 @@ components:
       properties:
         id:
           type: integer
-          format: int64
+          format: int32
         first_name:
           type: string
         last_name:
@@ -202,7 +335,7 @@ components:
           type: string
         created:
           type: number
-          format: int64
+          format: int32
     Product:
       required:
         - id
@@ -218,7 +351,7 @@ components:
       properties:
         id:
           type: integer
-          format: int64
+          format: int32
         store_id:
           type: integer
           format: int32
@@ -233,10 +366,10 @@ components:
           format: int32
         created:
           type: integer
-          format: int64
+          format: int32
         modified:
           type: integer
-          format: int64
+          format: int32
         category:
           type: integer
           format: int32
@@ -257,10 +390,10 @@ components:
       properties:
         user_id:
           type: integer
-          format: int64
+          format: int32
         product_id:
           type: integer
-          format: int64
+          format: int32
     CartPosition: &cart_position
       required:
         - order_id
@@ -270,10 +403,10 @@ components:
       properties:
         order_id:
           type: integer
-          format: int64
+          format: int32
         product_id:
           type: integer
-          format: int64
+          format: int32
         quantity:
           type: integer
           format: int32
@@ -286,7 +419,7 @@ components:
             "$ref": "#/components/schemas/Product"
           quantity:
             type: integer
-            format: int64
+            format: int32
     OrderPosition: *cart_position
     Order:
       required:
@@ -299,7 +432,7 @@ components:
       properties:
         id:
           type: integer
-          format: int64
+          format: int32
         status:
           type: string
           description: Order status
@@ -312,13 +445,13 @@ components:
             - completed
         user_id:
           type: integer
-          format: int64
+          format: int32
         created:
           type: integer
-          format: int64
+          format: int32
         status_modified:
           type: integer
-          format: int64
+          format: int32
     ProductReview:
       required:
         - id
@@ -332,13 +465,13 @@ components:
       properties:
         id:
           type: integer
-          format: int64
+          format: int32
         user_id:
           type: integer
-          format: int64
+          format: int32
         product_id:
           type: integer
-          format: int64
+          format: int32
         rating:
           minimum: 1
           maximum: 100
@@ -348,4 +481,4 @@ components:
           type: string
         created:
           type: integer
-          format: int64
+          format: int32
